finished a json parser

--- a/Find-A-Hack/app/assets/stylesheets/cover.sass
+++ b/Find-A-Hack/app/assets/stylesheets/cover.sass
@@ -60,20 +60,7 @@ html
 #searchbox5
  width: 200px
  margin: 0 auto
- padding: 50px 0 30px
-
-#search5:focus
- width: 200px
- outline: 0
- border: 1px solid #d1d1d1
- font: bold 12px Arial, Helvetica, Sans-serif
- color: #777
- width: 150px
- padding: 6px 15px 6px 35px
- text-shadow: 0 2px 2px rgba(0,0,0,0.3)
- box-shadow: 0 1px 0 rgba(255,255,255,0.1), 0 1px 3px rgba(0,0,0,0.2) inset
- -webkit-transition: all 0.7s ease 0s
-
+ padding: 0
 
 .image-box
  height: 100px
@@ -134,12 +121,10 @@ a:hover
  #date
   padding: 0 10px
   margin: 0 10px
-  border-right: 1px grey solid
 
  #location
   padding: 0 10px
   margin: 0 10px
-  border-right: 1px grey solid
 
  #popularity
   text-align: center
